2001-01-11  Ulrich Drepper  <drepper@redhat.com>

	* libio/stdio.h: Remove definition of off_t.

2001-01-11  Andreas Jaeger  <aj@suse.de>

	* wcsmbs/tst-mbrtowc.c (utf8_test): New function by Markus Kuhn
	<mkuhn@acm.org>.

2001-01-10  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/Makefile (distribute): Add errqueue.h.

2001-01-10  H.J. Lu  <hjl@gnu.org>

	* sysdeps/ia64/dl-machine.h (TRAMPOLINE_TEMPLATE): Also preserve
	r9, r10 and r11 for language specific registers.

2001-01-10  Jakub Jelinek  <jakub@redhat.com>

	* sunrpc/clnt_udp.c (clntudp_bufcreate): Set IP_RECVERR on the
	UDP socket.
	(clntudp_call): Handle MSG_ERRQUEUE.
	* sysdeps/generic/errqueue.h: New file.
	* sysdeps/unix/sysv/linux/errqueue.h: New file.

2001-01-10  H.J. Lu  <hjl@gnu.org>

	* sysdeps/unix/sysv/linux/ia64/syscalls.list (s_getpagesize): Removed.

2001-01-10  Joseph S. Myers  <jsm28@cam.ac.uk>

	* CONFORMANCE: Update.

2001-01-09  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/elf/backtracesyms.c (__backtrace_symbols):
	Minimal cleanups.  Add assert to ensure memory handling is correct.

	* manual/conf.texi (File Minimums): Fix _POSIX_PATH_MAX value.
	Reported by Ben Collins <bcollins@debian.org>.

	* time/strftime.c (my_strftime): Mark previous GNU extensions
	which are now in C99 as such.

2001-01-08  Ulrich Drepper  <drepper@redhat.com>

	* elf/rtld.c (process_envvars): Place output files for profiling
	in SUID binaries in /var/profile.

	* elf/dl-load.c (_dl_map_object): Don't look in cache for
	preloading in SUID binaries.

	* elf/dl-profile.c (_dl_start_profile): Open the output file with
	O_NOFOLLOW if possible.

	* include/stdlib.h: Add __posix_openpt declaration.
	* stdlib/stdlib.h: Add posix_openpt declaration.
	* login/Versions: Add posix_openpt for GLIBC_2.2.1.
	* sysdeps/generic/getpt.c: Define posix_openpt.
	* sysdeps/unix/bsd/getpt.c: Likewise.
	* sysdeps/unix/sysv/linux/getpt.c: Likewise.

	* time/Makefile (tests): Add tst-mktime.